# orion

./: Cargo.toml  README.md
.github/workflows/: auto_merge.yaml  cc.yaml  cv.yaml
crates/orion/: Cargo.toml
crates/orion-api/: Cargo.toml
crates/orion-build/: Cargo.toml
crates/orion-cli/: Cargo.toml
crates/orion-config/: Cargo.toml  Sample.yaml  schema.json
crates/orion-core/: Cargo.toml
crates/orion-macros/: Cargo.toml
crates/orion-permissions/: Cargo.toml
crates/orion-server/: Cargo.toml
crates/orion-templates/: Cargo.toml
crates/orion-test/: Cargo.toml
crates/orion-tracing/: Cargo.toml
crates/orion-ui/: Cargo.toml
crates/orion-webview/: Cargo.toml
crates/orion-window/: Cargo.toml
crates/orion/src/: lib.rs
docs/specifications/: crates.md
examples/simple/: Cargo.toml
examples/simple/src/: lib.rs
