[package]
name = "orion-tracing"
description = "provides utilities for both build time and run time tracing"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
